# ray-tracing

./: .~lock.ray_tracing.odp#  Cargo.toml  README.md  image.ppm  ray_tracing.odp
src/: camera.rs  main.rs  objects.rs  ray.rs  utils.rs  vec3.rs
