[package]
name = "ray-tracing"
version = "0.1.0"
authors = ["Dermot McEneaney <dermot.mceneaney@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vec3 = {path = "/home/dme/Documents/workpace/libraries/vec3"}
